--- a/index.html
+++ b/index.html
@@ -1,76 +1,153 @@
-<div style="width: 100%; height: 100%; position: relative; background: rgba(255, 255, 255, 0)">
-    <div style="width: 1920px; height: 1080px; left: 0px; top: 0px; position: absolute; background: white"></div>
-    <div style="width: 1920px; height: 1080px; left: 0px; top: 0px; position: absolute">
-        <div style="width: 1560px; height: 69.61px; left: 180px; top: 1010.39px; position: absolute; background: #D9D9D9"></div>
-        <div style="width: 221px; height: 962.93px; left: 1699px; top: 117.07px; position: absolute; background: #D9D9D9"></div>
-        <div style="width: 220px; height: 963px; left: 220px; top: 1080px; position: absolute; transform: rotate(-180deg); transform-origin: 0 0; background: #D9D9D9; border-top-left-radius: 36px"></div>
-        <div style="width: 1920px; height: 187.73px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-top-left-radius: 36px; border-top-right-radius: 36px"></div>
-    </div>
-    <div style="width: 1479.60px; height: 822px; left: 220px; top: 188px; position: absolute">
-        <div style="width: 1479.60px; height: 164.40px; left: 0px; top: 657.60px; position: absolute">
-            <div style="width: 164.40px; height: 164.40px; left: 0px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 164.40px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 328.80px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 493.20px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 657.60px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 822px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 986.40px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1150.80px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1315.20px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-        </div>
-        <div style="width: 1479.60px; height: 164.40px; left: 0px; top: 493.20px; position: absolute">
-            <div style="width: 164.40px; height: 164.40px; left: 0px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 164.40px; top: -0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 328.80px; top: -0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 493.20px; top: -0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 657.60px; top: -0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 822px; top: -0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 986.40px; top: -0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1150.80px; top: -0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1315.20px; top: -0px; position: absolute; background: #818479; border: 1px black solid"></div>
-        </div>
-        <div style="width: 1479.60px; height: 164.40px; left: 0px; top: 328.80px; position: absolute">
-            <div style="width: 164.40px; height: 164.40px; left: 0px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 164.40px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 328.80px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 493.20px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 657.60px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 822px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 986.40px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1150.80px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1315.20px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-        </div>
-        <div style="width: 1479.60px; height: 164.40px; left: 0px; top: 164.40px; position: absolute">
-            <div style="width: 164.40px; height: 164.40px; left: 0px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 164.40px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 328.80px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 493.20px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 657.60px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 822px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 986.40px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1150.80px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1315.20px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-        </div>
-        <div style="width: 1479.60px; height: 164.40px; left: 0px; top: 0px; position: absolute">
-            <div style="width: 164.40px; height: 164.40px; left: 0px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 164.40px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 328.80px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 493.20px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 657.60px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 822px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 986.40px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1150.80px; top: 0px; position: absolute; background: #AEB2A4; border: 1px black solid"></div>
-            <div style="width: 164.40px; height: 164.40px; left: 1315.20px; top: 0px; position: absolute; background: #818479; border: 1px black solid"></div>
-        </div>
-    </div>
-    <div style="width: 760px; height: 141px; left: 25px; top: 19px; position: absolute">
-        <div style="width: 760px; height: 141px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 12px; border: 3px black solid"></div>
-        <div style="width: 658px; height: 141px; left: 102px; top: 0px; position: absolute; background: white; border-top-left-radius: 12px; border-top-right-radius: 12px; border: 3px black solid"></div>
-        <div style="width: 60px; height: 60px; left: 20px; top: 40px; position: absolute; background: white; border-radius: 9999px; border: 1px black solid"></div>
-        <div style="width: 76px; height: 27px; left: 12px; top: 100px; position: absolute; background: white; border: 1px black solid"></div>
-    </div>
-    <div style="width: 169px; height: 59px; left: 1530px; top: 0px; position: absolute">
-        <div style="width: 169px; height: 59px; left: 0px; top: 0px; position: absolute; background: black; border-top-left-radius: 12px; border-top-right-radius: 12px; border: 1px black solid"></div>
-        <div style="left: 35px; top: 12px; position: absolute; color: #F91414; font-size: 32px; font-family: Soloist; font-weight: 400; word-wrap: break-word">Menü</div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="initial-scale=1, width=device-width">
+  	
+  	
+  	<link rel="stylesheet" href="./global.css" />
+  	<link rel="stylesheet"  href="./index.css" />
+  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Soloist:wght@400&display=swap" />
+  	
+  	
+  	
+</head>
+<body>
+  	
+  	<div class="desktop-1">
+    		<div class="feld">
+    		</div>
+    		<div class="rand">
+      			<div class="rand-child">
+      			</div>
+      			<img class="rand-item" alt="" src="Rectangle 1.svg">
+      			
+      			<div class="rand-inner">
+      			</div>
+      			<div class="rectangle-div">
+      			</div>
+    		</div>
+    		<div class="felder">
+      			<div class="reihe1">
+        				<div class="reihe1-child">
+        				</div>
+        				<div class="reihe1-item">
+        				</div>
+        				<div class="reihe1-inner">
+        				</div>
+        				<div class="reihe1-child1">
+        				</div>
+        				<div class="reihe1-child2">
+        				</div>
+        				<div class="reihe1-child3">
+        				</div>
+        				<div class="reihe1-child4">
+        				</div>
+        				<div class="reihe1-child5">
+        				</div>
+        				<div class="reihe1-child6">
+        				</div>
+      			</div>
+      			<div class="reihe3">
+        				<div class="reihe1-child">
+        				</div>
+        				<div class="reihe1-item">
+        				</div>
+        				<div class="reihe1-inner">
+        				</div>
+        				<div class="reihe1-child1">
+        				</div>
+        				<div class="reihe1-child2">
+        				</div>
+        				<div class="reihe1-child3">
+        				</div>
+        				<div class="reihe1-child4">
+        				</div>
+        				<div class="reihe1-child5">
+        				</div>
+        				<div class="reihe1-child6">
+        				</div>
+      			</div>
+      			<div class="reihe4">
+        				<div class="reihe1-child">
+        				</div>
+        				<div class="reihe1-item">
+        				</div>
+        				<div class="reihe1-inner">
+        				</div>
+        				<div class="reihe1-child1">
+        				</div>
+        				<div class="reihe1-child2">
+        				</div>
+        				<div class="reihe1-child3">
+        				</div>
+        				<div class="reihe1-child4">
+        				</div>
+        				<div class="reihe1-child5">
+        				</div>
+        				<div class="reihe1-child6">
+        				</div>
+      			</div>
+      			<div class="reihe5">
+        				<div class="reihe1-child">
+        				</div>
+        				<div class="reihe1-item">
+        				</div>
+        				<div class="reihe1-inner">
+        				</div>
+        				<div class="reihe1-child1">
+        				</div>
+        				<div class="reihe1-child2">
+        				</div>
+        				<div class="reihe1-child3">
+        				</div>
+        				<div class="reihe1-child4">
+        				</div>
+        				<div class="reihe1-child5">
+        				</div>
+        				<div class="reihe1-child6">
+        				</div>
+      			</div>
+      			<div class="reihe6">
+        				<div class="reihe1-child">
+        				</div>
+        				<div class="reihe1-item">
+        				</div>
+        				<div class="reihe1-inner">
+        				</div>
+        				<div class="reihe1-child1">
+        				</div>
+        				<div class="reihe1-child2">
+        				</div>
+        				<div class="reihe1-child3">
+        				</div>
+        				<div class="reihe1-child4">
+        				</div>
+        				<div class="reihe1-child5">
+        				</div>
+        				<div class="reihe1-child6">
+        				</div>
+      			</div>
+    		</div>
+    		<div class="inventar">
+      			<div class="inventar1">
+      			</div>
+      			<div class="inventar-child">
+      			</div>
+      			<div class="inventar-item">
+      			</div>
+      			<div class="inventar-inner">
+      			</div>
+    		</div>
+    		<div class="men">
+      			<div class="men1">
+      			</div>
+      			<div class="men2">Menü</div>
+    		</div>
+  	</div>
+  	
+  	
+  	
+  	
+</body>
+</html>
