--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	
   	
 </head>
-<body>
+<body onload="onload()">
   	
   	<div class="desktop-1">
             <canvas id="Canvas" width="1920" height="1080"></canvas>
@@ -148,7 +148,7 @@
     		</div>
     		
   	
-  	
+  	<script src="currency.js"></script>
   	
   	
 </body>
