tests und bug fixes

--- a/test.html
+++ b/test.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Game</title>
+    <link rel="stylesheet" href="test.css">
+
 </head>
 <body onload="onload()">
+    <div>
+        <div id="cur_board"></div>
+        <canvas id="Canvas" width="1080" height="720"></canvas>
+    </div>
 
-    <canvas id="Canvas" width="1080" height="720"></canvas>
 
 
+    
     <script src="currency.js"></script>
+
 </body>
 </html>
