--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 
 </head>
 <body onload="onload()">
-    <div>
+    <div id="main">
         <div id="cur_board"></div>
         <canvas id="Canvas" width="1080" height="720"></canvas>
     </div>
