--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body onload="onload()">
   	
-  	
+  	<canvas id= "Spielfeld" height="1000" width="1500"></canvas>
   	
   	<script src="currency.js"></script>
   	
