--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
   	
   	<link rel="stylesheet" href="./global.css" />
   	<link rel="stylesheet"  href="./index.css" />
-  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Soloist:wght@400&display=swap" />
+
+
+
   	
   	
   	
 </head>
-<body onload="onload()">
-  	
-  	<canvas id= "Spielfeld" height="1000" width="1500"></canvas>
-  	
-  	<script src="currency.js"></script>
+<body>
+      <div>
+            <div id="cur_board" width="100px" height="100px"></div>
+            <canvas id= "Spielfeld" height="1000" width="1500"></canvas>
+      </div>
+
+
+      <script type="module" src="currency.js"></script>
+
   	
   	
 </body>
